# AiDungeonMaster

./: .env.example  .gitignore  LICENSE  README.md  Start-Server.bat  ai-dm-Claude-code-prompt.md  config.yaml  pyproject.toml  requirements.txt  run_web.py  start-server.ps1  test_bestiary.py  test_combat.py
.claude/: settings.local.json
data/prompts/: character_interview.txt  combat_narrator.txt  dm_system.txt  world_builder.txt
data/srd/: artifacts.json  classes.json  equipment.json  feats.json  magic_items.json  monsters.json  races.json  spells.json  treasure_tables.json
models/voices/: .gitkeep
scripts/: add_core_feats.py  add_core_monsters.py  content_audit.py  d20pfsrd_scraper.py  expand_adventuring_gear.py
src/: __init__.py  config.py  main.py
src/campaign/: __init__.py  generator.py  npcs.py  quests.py  world.py
src/characters/: __init__.py  classes.py  creator.py  inventory.py  races.py  sheet.py
src/database/: __init__.py  models.py  session.py
src/game/: __init__.py  bestiary.py  combat.py  conditions.py  dice.py  rules.py  scene_packet.py  session_state.py  spells.py
src/llm/: __init__.py  client.py  memory.py  prompts.py
src/prompts/: __init__.py  builder.py  dm_contract.py
src/ui/: __init__.py  app.py  icons.py  styles.tcss
src/ui/screens/: __init__.py  bestiary_screen.py  character_creation.py  character_edit.py  combat_view.py  game_session.py  inventory_screen.py  level_up.py  main_menu.py  map_view.py  npc_screen.py  party_manager.py  point_buy.py  quest_log.py  save_load.py  settings_screen.py  spell_select.py
src/ui/widgets/: __init__.py  character_display.py  chat_log.py  dice_roller.py
src/web/: __init__.py  server.py  speech.py  timing.py  tts.py
src/web/templates/: index.html
tests/: __init__.py  test_campaign.py  test_config.py  test_database.py  test_dice.py  test_llm.py  test_ui.py
